<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">Cinéma</string>
	<string name="film_activity_label">Ajouter ou modifier</string>
	<string name="espace_activity_label">Cinémas</string>
	<string name="preferences_activity_label">Préférences</string>
	<string name="Sceance">séance</string>
	<string name="NoSceance">Aucune donnée !\nCliquez pour ajouter une séance.</string>	
	<string name="NoTheater">Aucun cinéma !</string>	
	<string name="No_filter_result">Aucun résultat pour ce filtre ou cette recherche.</string>	
	<string name="Nouveau">Nouveau</string>
	<string name="Modifier">Modifier</string>
	<string name="Ajouter">Ajouter</string>
	<string name="Supprimer">Supprimer</string>
	<string name="Annuler">Annuler</string>
	<string name="Fermer">Fermer</string>	
	<string name="QuestionQuitter">Quitter l\'application ?</string>
	<string name="YearPrompt">Année</string>
	<string name="YearAll">Toutes</string>
	<string name="Tri">Tri</string>
	<string name="tv_Titre">Titre</string>
	<string name="tv_Detail">Info.</string>
	<string name="tv_Time">Heure</string>
	<string name="tv_Date">Date</string>
	<string name="tv_Prix">Prix</string>
	<string name="tv_NbPersonnes">Nb. pers.</string>
	<string name="tv_Date_debut">Date début</string>
	<string name="tv_Date_fin">Date fin</string>
	<string name="tv_Cinema">Cinéma</string>
	<string name="CinemasPrompt">Cinéma ?</string>
	<string name="NouvCinema">Nouveau</string>
	<string name="Recherche">Recherche</string>
	<string name="GestionCinema">Gestion cinémas</string>
	<string name="GestionCine">Gestion</string>
	<string name="Confirmation">Confirmation</string>
	<string name="SupprimerSceance">Supprimer cette séance ?</string>
	<string name="SupprimerCinema">Supprimer ce cinéma ?</string>
	<string name="OUI">Oui</string>
	<string name="NON">Non</string>
	<string name="TitreVide">Titre vide !</string>
	<string name="DateVide">__/__/____</string>
	<string name="TimeVide">__:__</string>
	<string name="DateFormat">yyyy-MM-dd</string>
	<string name="Importer">Importer</string>
	<string name="ConfirmationImporter">Remplacer les données actuelles ?</string>
	<string name="nbsceances"></string>	 <!--  Nombres de films:  -->
	<string name="search_hint">Rechercher un film</string>
	<string name="Rechercher">Rechercher</string>
	<string name="Preferences">Préférences</string>		
	<string name="Trier">Trier par</string>
	<string name="Filtrer">Filtrer</string>		
	<string name="exportOk">Exportation terminée</string>
	<string name="importOk">Importation terminée</string>
	<string name="restart">Redémarrer l\'application</string>
	<string name="SuppressionEspaceImpossible">Suppression imposible. Dépendance avec les séances.</string>	
	<string name="DetailCout">Info Coût détaillé</string>
	<string name="BudgetTotal">Budget total</string>
	<string name="TitreDetailCout">Coût global et par année</string>
	<string name="Fait">Fait</string>
	<string name="ToggleNavigationBar">Afficher/Cacher la Barre de Navigation</string>	
</resources>
